# erc20

example/erc20-token/: Cargo.toml
example/erc20-token/src/: main.rs
