[package]
name = "erc20-token"
authors = ["Michał Papierski <michal@casperlabs.io>"]
version = "0.1.0"
edition = "2018"

[dependencies]
casper-contract = "1.3.2"
casper-erc20 = { path = "../../erc20" }
casper-types = "1.3.2"

[target.'cfg(target_arch = "x86_64")'.dependencies]
rand = "0.8.4"

[[bin]]
name = "erc20_token"
path = "src/main.rs"
bench = false
doctest = false